--- a/source/guides/index.html.slim
+++ b/source/guides/index.html.slim
@@ -18,10 +18,14 @@ ruby:
     section.section-article
         .row.align-center
             .columns.small-12.large-6.text-center.group
-                h2.headline-3 Datica Guides
+                = inline_svg("icon-book-academy", class: "icon-size--medium")
+                h3.headline-5.spaced-out
+                    / = inline_svg("small/icon-book-fill", class: "icon-inline icon-left")
+                    | Datica Academy
+                h2.headline-2 Datica Guides
                 p.lead Authoritative Guides Written By Industry Experts
 
-        .row.full-width.small-up-1.large-up-2
+        .row.full-width.small-up-1.large-up-2.xxlarge-up-3
             - sorted_entries.each do | id, guide_entry |
                 - if guide_entry.has_key?("image_thumb")
                     - thumb = guide_entry.image_thumb.url
@@ -30,24 +34,23 @@ ruby:
                 - else
                     - thumb = nil
                 .column.group
-                    .row
-                        - unless thumb == nil
-                            .columns.small-4.medium-3.large-3
-                                a href="/guide/#{guide_entry["slug"]}" title=("Get your free guide")
-                                    img.thumbnail(src="#{thumb}?fit=thumb&w=300&h=300" alt="Guide Preview")
-                        .columns.small-12.medium-8.large-9
-                            .h2.headline-5
-                                a(href="/guide/#{guide_entry["slug"]}" title="Get your free guide") = guide_entry["title"]
-                            .menu.simple
-                                - if guide_entry.has_key?("discovery_topic")
-                                    li
-                                        span.label.info.round = data.site.discover[guide_entry.discovery_topic.id].title
-                                - if guide_entry.has_key?("authors")
-                                    - guide_entry.authors.each do | author |
-                                        li
-                                            span
-                                                = partial("partials/snippets/person-avatar", :locals => { :p => author, :size => "small" })
-                            .text-small
-                                = Kramdown::Document.new(guide_entry["summary"]).to_html
+                    - unless thumb == nil
+                        a href="/guide/#{guide_entry["slug"]}" title=("Get your free guide")
+                            img.thumbnail.float-left(src="#{thumb}?fit=thumb&w=240&h=240" alt="Guide Preview" width="120")
 
-        = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
+                    .h2.headline-5.margin-bottom-small
+                        a(href="/guide/#{guide_entry["slug"]}" title="Get your free guide") = guide_entry["title"]
+                    .menu.simple.margin-bottom-small
+                        - if guide_entry.has_key?("discovery_topic")
+                            li
+                                span.label.info.round = data.site.discover[guide_entry.discovery_topic.id].title
+                        - if guide_entry.has_key?("authors")
+                            - guide_entry.authors.each do | author |
+                                li
+                                    = partial("partials/snippets/person-avatar", :locals => { :p => author, :size => "small" })
+                    .text-small
+                        = Kramdown::Document.new(guide_entry["summary"]).to_html
+
+        .row.align-center
+            .columns.small-12.text-center.group
+                = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
