--- a/source/assets/scss/views/dhsf.scss
+++ b/source/assets/scss/views/dhsf.scss
@@ -274,11 +274,11 @@ $strip-width: 2vw;
     .callout {
         margin-bottom: 1em; // use em as it might be in a sea of type
     }
-    .menu {
-        li > a {
-            padding-left: 0;
-        }
-    }
+    // .menu {
+    //     li > a {
+    //         padding-left: 0;
+    //     }
+    // }
     //
     .tabs-panel {
         padding: 1.5rem 0 1rem 0; // fallback
