--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -218,4 +218,5 @@ collectionOrder: 4
                 <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" } %>
             </div>
         </div>
+    </div>
 </aside>
