--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -147,3 +147,17 @@ current_page.data.date = today.strftime('%B %-d, %Y')
         </aside>
     </div>
 </section>
+<section class="container-gray-10 section-article">
+    <%= partial "partials/content/recent-items" %>    
+</section>
+<aside id="ctaBottom" class="container-color--dark-grad-blue"> 
+    <div class="section-article container-image--center" data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]">
+        <div class="row align-center">
+            <div class="columns small-12 medium-10 text-center">
+                <h2 class="headline-3 group"><strong>End-to-end compliance</strong> with Kubernetes is here.</h2>
+                <!-- <p class="lead">Start your free trial today.</p> -->
+                <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" } %>
+            </div>
+        </div>
+    </div>
+</aside>
