--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -97,16 +97,17 @@ end
                 <div class="sticky" data-sticky data-sticky-on="large" data-options="anchor: content;">
                 <% if p.has_key?("related_guide") %>
                     <div class="group">
-                    <%= partial "partials/cards/card-report", :locals => { :post => p.related_guide, :style => "dark", :size => "small", :desc => true } %>
+                    <%= partial "partials/cards/card-report", :locals => { :post => p.related_guide, :style => "white", :size => "small", :desc => true } %>
                     </div>
                 <% else %>
-                <% sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse! %>
-                <% sorted_guides.take(1).each do | id, guide_entry | %>
-                    <div class="group">
-                    <%= partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small", :desc => true } %>
-                    </div>
+                    <% sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse! %>
+                    <% sorted_guides.take(1).each do | id, guide_entry | %>
+                        <div class="group">
+                        <%= partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "white", :size => "small", :desc => true } %>
+                        </div>
+                    <% end %>
                 <% end %>
-                <% end %>
+                <div class="text-center"><%= inline_svg("icon-book-academy", class: "icon-size--medium svg-color--gray-6") %></div>
                 <div id="toc-sidebar" class="group article-toc show-for-large"></div>                                  
                 </div>
             </aside>
