--- a/source/partials/cards/_card-report.slim
+++ b/source/partials/cards/_card-report.slim
@@ -55,18 +55,26 @@ ruby:
 / Renders a card inside a post loop. Post var must be injected - AW
 
 .card(class="#{style_classes} #{fit_classes}")
-    .card-section
-        .subheader-small
-            = card_subhead
-        h3.headline-4
-            a class=link_style href=related_post_path title=link_title
-                = post.title
-        - unless image_url == nil
-            a.text-center href=related_post_path title=link_title
-                img.thumbnail.float-right(src="#{image_url}?fit=thumb&w=240&h=240" alt="preview" width="120")
-        - if defined?(desc) && desc == true
+    - if defined?(desc) && desc == true
+        .card-section
+            .subheader-small
+                = card_subhead
+            h3.headline-4
+                a class=link_style href=related_post_path title=link_title
+                    = post.title
+            - unless image_url == nil
+                a.text-center href=related_post_path title=link_title
+                    img.thumbnail.float-right(src="#{image_url}?fit=thumb&w=240&h=240" alt="preview" width="120")
             p.text-small = post.summary
-        = partial "partials/snippets/button", :locals => { :label => link_title_short, :url => related_post_path, :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right" }
-    / - if post.has_key?("image_thumb")
-    /     a.text-center href=related_post_path title=link_title
-    /         img class="product-thumb" alt="preview" data-interchange="[#{image_url}?fit=thumb&w=400&q=50, small], [#{image_url}?fit=thumb&w=600, large]" style="padding: 0 1rem 0 1rem;" /
+            - if defined?(show_button) && show_button == true
+                = partial "partials/snippets/button", :locals => { :label => link_title_short, :url => related_post_path, :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right" }
+    - else
+        .card-section
+            .subheader-small
+                = card_subhead
+            h3.headline-4
+                a class=link_style href=related_post_path title=link_title
+                    = post.title
+        - if post.has_key?("image_thumb")
+            a.text-center href=related_post_path title=link_title
+                img class="product-thumb" alt="preview" data-interchange="[#{image_url}?fit=thumb&w=400&q=50, small], [#{image_url}?fit=thumb&w=600, large]" style="padding: 0 1rem 0 1rem;" /
