Minor change to help URL, might avoid a redir

--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -27,7 +27,7 @@ layout: basic
                             <li><a class="" href="/blog" title="Learn more">Company blog <i class="fa fa-angle-right"></i></a></li>
                             <li><a class="" href="/innovation" title="Learn more">Healthcare Innovators Podcast <i class="fa fa-angle-right"></i></a></li>
                             <li><a class="" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub <i class="fa fa-angle-right"></i></a></li>
-                            <li><a class="" href="https://help.datica.com" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="https://help.datica.com/hc/en-us" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a></li>
                         </ul>
                     </div>
                 </div>
