Updated npm; created GDPR alert banner.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -46,6 +46,7 @@ section.section-article
             img alt="#{logo["name"]}" class=logopad src="#{logo["fileUrl"]}" /
       = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/platform/compliance", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
+= partial "partials/snippets/alert-ribbon-gdpr"
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
   .row.align-center
