--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -9,5 +9,5 @@ aside id="alertTop" class="hide full-width alert-ribbon text-center" data-closab
   a.dismiss(href="https://content.datica.com/gdpr-2018-05-24" title="Webinar: GDPR Compliance in Healthcare. May 24 - Register today!")
     img data-interchange="[https://images.ctfassets.net/189dvqdsjh46/4MJYuJyGRy2WEI2s6I6oiW/de002c8a3a21bedb5bddd13afaa25c94/webinar-gdpr-promo-ribbon-mobile.png?w=960, small], [https://images.ctfassets.net/189dvqdsjh46/2m1g86yNwESYoUOc42MKIk/3dc044c62f6144e9efbfed46e7eaec9b/webinar-gdpr-promo-ribbon-desktop.png, medium]" /
   .row.align-center
-    button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
+    button id="promo-dismiss" class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
       span aria-hidden="true" &times;
