gwc fixes, redirs. Dupe meta desc fixed.

--- a/source/press/mediakit.html.erb
+++ b/source/press/mediakit.html.erb
@@ -1,6 +1,6 @@
 ---
 title: "Datica Press and Media Resources"
-summary: "Datica press releases, announcements, media coverage, and contact information"
+summary: "Download our brand elements and understand how to use them."
 author: "Datica, Inc."
 tags: "media, logos, press, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
