--- a/source/partials/snippets/_press-links.erb
+++ b/source/partials/snippets/_press-links.erb
@@ -1,6 +1,6 @@
 <ul class="fa-ul">
     <li><a title="Follow us on Twitter" href="https://twitter.com/daticahealth"><i class="fa fa-li fa-twitter"></i> @daticahealth</a></li>
-    <li><a title="Connect with us on LinkedIn" href="https://www.linkedin.com/company/catalyze-inc-"><i class="fa fa-li fa-linkedin"></i> LinkedIn Profile</a></li>
-    <li><a title="Read our latest at Medium" href="https://medium.com/change-agent"><i class="fa fa-li fa-medium"></i> Medium Publication</a></li>
+    <li><a title="Connect with us on LinkedIn" href="https://www.linkedin.com/company/datica/"><i class="fa fa-li fa-linkedin"></i> LinkedIn Profile</a></li>
+<!--     <li><a title="Read our latest at Medium" href="https://medium.com/change-agent"><i class="fa fa-li fa-medium"></i> Medium Publication</a></li> -->
     <li><a title="Media Kit Downloads" href="/press/mediakit"><i class="fa fa-li fa-download"></i> Media Kit Downloads</a></li>
 </ul>
