Installed at top of site globally; not sure how to handle this with multiple banners, from a UX pov.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -35,7 +35,7 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
           .card.container-color--light-shimmer
             = partial("partials/ctas/card-schedule-demo")
 .strip-bright
-= partial "partials/snippets/alert-ribbon-gdpr"
+/ = partial "partials/snippets/alert-ribbon-gdpr"
 section.section-article
   .row.align-center.text-center
     .columns.small-12.large-9
