--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -22,7 +22,7 @@ css:
   }
 = partial "assets/icons/inlined/datica-logo-horiz-symbol.svg"
 / = partial "partials/snippets/alert-ribbon"
-
+= partial "partials/snippets/alert-ribbon-gdpr"
 header.main-header
   nav.nav.nav-mobile.hide-for-large
     .title-bar.align-middle data-responsive-toggle="nav-mobile" data-hide-for="large"
