--- a/source/partials/head/_header-old.erb
+++ b/source/partials/head/_header-old.erb
@@ -20,7 +20,7 @@ end
             <div class="group input-nav input-nav--white">
                 <%= partial "partials/snippets/search-field" %>
             </div>
-            <a href="/contact" class="expanded button button--light" data-track="true" data-track-id="contact-main-mobile">Contact us</a>
+            <a href="/contact/" class="expanded button button--light" data-track="true" data-track-id="contact-main-mobile">Contact us</a>
         </div>
         <% data.nav_primary.nav_main.each do |m| %>
             <%= current_link_to m.title, m.url, title: m.desc, class: "menu-item--simple", "data-track": "true", "data-track-category": track_category, "data-track-id": 'nav_' + m.title.parameterize %>
@@ -103,7 +103,7 @@ end
             </div>
         </div>
         <a href="https://product.datica.com" class="menu-item--simple" target="_blank">Sign in</a>
-        <a href="/contact" id="topNavCTA" data-track="true" data-track-id="contact-main" class="button <% if defined?(style) && style == "light" %> button hollow-inverted<% else %> primary<% end %>">Contact us</a>
+        <a href="/contact/" id="topNavCTA" data-track="true" data-track-id="contact-main" class="button <% if defined?(style) && style == "light" %> button hollow-inverted<% else %> primary<% end %>">Contact us</a>
     </nav>
     <div class="mobile-menu">
         <!-- <span class="icon-label">menu</span> -->
