--- a/source/platform/_legacy-pricing-snippet.slim
+++ b/source/platform/_legacy-pricing-snippet.slim
@@ -31,4 +31,4 @@
             p All other installable technologies aren’t platforms meant to greatest compliance coverage with the best experience. Instead, you pay for consultant service fees.
       .row
         .columns.small-12.text-center
-          = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo Today", :url => "/demo", :button_classes => "button", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :item_id => "demo" }
+          = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo Today", :url => "/demo/", :button_classes => "button", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :item_id => "demo" }
