--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -40,7 +40,7 @@ section#compliance-top.container-color--dark-alt style=("background-color: #2327
           p The Datica Platform allows development flexibility via Kubernetes while providing a prescriptive compliance and security layer on top.
           p.lead With Datica, any technology team can manage compliance on the cloud, giving organizations the assurances they need to adopt the benefits of the cloud.
       .menu.button-cluster.align-center
-        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
+        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo/", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
         = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_top-customers" }
 
 section#compliance-shared-responsibility.section-article.container-gray-2
