--- a/source/platform/roadmap.html.slim
+++ b/source/platform/roadmap.html.slim
@@ -111,8 +111,8 @@ section#productHelp.section-article.container-gray-11.container-image--center da
         .card-section.text-center
           h2.headline-4.text-light.text--white <strong>End-to-end compliance</strong> with Kubernetes is here.
           / p Schedule a demo to learn more.
-          = partial "partials/snippets/button", :locals => { :label => "Schedule a demo today", :url => "/demo", :button_classes => "button expanded group--sm", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
-          = partial "partials/snippets/button", :locals => { :label => "Questions? Let's talk.", :url => "/contact", :button_classes => "button expanded hollow hollow-inverted", :icon => "hubspot-chat-blue", :icon_align => "left" }
+          = partial "partials/snippets/button", :locals => { :label => "Schedule a demo today", :url => "/demo/", :button_classes => "button expanded group--sm", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
+          = partial "partials/snippets/button", :locals => { :label => "Questions? Let's talk.", :url => "/contact/", :button_classes => "button expanded hollow hollow-inverted", :icon => "hubspot-chat-blue", :icon_align => "left" }
 
 / modal for form, hidden. form_id at the top
 .card.drop.medium.reveal#requestFeature data-options=("closeOnEsc: true; animationSpeed: 150; animationIn: bounce-in") data-reveal=""
