--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -46,7 +46,7 @@ priority: "1.0"
               p Rely on Datica experts for compliance, auditing, and technical developer operations needs. Datica offers <a href="/services" title="Professional Services">a wide range of professional services</a>.
             #pricing-cta.text-center.card-divider
               p.lead Choose a time to see a Platform demo, and our Datica Experts will help you get the features and support you need.
-              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button large button-inline", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :data_track_group => "platform", :item_id => "pricing-demo" }
+              = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo/", :button_classes => "button large button-inline", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left", :data_track_group => "platform", :item_id => "pricing-demo" }
 
 / .container-color--gray-light
 /   .container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, large]")
