status https; updating some of the card partials with trailing slashes.

--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -89,7 +89,7 @@ end
                         <% end %>
                         <% end %>
                         <div class="column">
-                            <%= partial "partials/snippets/button", :locals => { :label => "Datica Academy", :title => "Explore the Datica Academy", :url => "/academy", :button_classes => "button hollow", :icon => "icon-book-fill", :icon_align => "left" } %>
+                            <%= partial "partials/snippets/button", :locals => { :label => "Datica Academy", :title => "Explore the Datica Academy", :url => "/academy/", :button_classes => "button hollow", :icon => "icon-book-fill", :icon_align => "left" } %>
                     </aside>  
                 <% end %>
             </div>
