--- a/source/partials/ctas/_platform-cta.erb
+++ b/source/partials/ctas/_platform-cta.erb
@@ -7,7 +7,7 @@
                 <div class="">
                     <h3 class="headline-3">Get Started Today</h3>
                     <div class="lead">Explore our pricing options</div>
-                    <a class="button button--neat cta-button" href="/pricing" title="See pricing and sign up free"> View pricing information <i class="fa fa-angle-right"></i></a>
+                    <a class="button button--neat cta-button" href="/pricing/" title="See pricing and sign up free"> View pricing information <i class="fa fa-angle-right"></i></a>
                 </div>
             </aside>
         </div>
