--- a/source/partials/section-promos/_report-promo.erb
+++ b/source/partials/section-promos/_report-promo.erb
@@ -39,7 +39,7 @@ end
                                 :locals => {
                                     :label => "Download your free report", 
                                     :title => "Get the report", 
-                                    :url => "/innovation/" + p.slug, 
+                                    :url => "/innovation/" + p.slug + "/", 
                                     # :rel => "external", 
                                     :button_classes => "button button--primary card-button-override", 
                                     :icon => "icon-chevron-right", 
