--- a/source/partials/snippets/_card_customer.erb
+++ b/source/partials/snippets/_card_customer.erb
@@ -14,6 +14,6 @@
 </blockquote>
 <%= partial("partials/snippets/person", :locals => { :p => entry["customer"] }) %>
 
-<a class="button" href="/customer/<%= entry["slug"] %>">
+<a class="button" href="/customer/<%= entry["slug"] %>/">
     Read about <%= entry["customer"]["company_name"] %>
 </a>
