--- a/source/partials/snippets/_person-vertical.erb
+++ b/source/partials/snippets/_person-vertical.erb
@@ -19,7 +19,7 @@ end
     <div class="person-card--caption">
         <<%= tag_1 %> class="person-name">
             <% if datican == true %>
-                <a href="/about/<%= p["slug"] %>" title="Learn more about <%= p["fullname"] %>">
+                <a href="/about/<%= p["slug"] %>/" title="Learn more about <%= p["fullname"] %>">
                     <%= p["fullname"] %>
                 </a>
             <% else %>
