--- a/source/partials/snippets/_person.erb
+++ b/source/partials/snippets/_person.erb
@@ -23,7 +23,7 @@ end
     <div class="media-object-section media-object--info main-section align-self-middle">
         <<%= tag_1 %> class="person-name">
             <% if datican == true %>
-                <a href="/about/<%= p["slug"] %>" title="Learn more about <%= p["fullname"] %>">
+                <a href="/about/<%= p["slug"] %>/" title="Learn more about <%= p["fullname"] %>">
                     <%= p["fullname"] %>
                 </a>
             <% else %>
