--- a/source/partials/cards/_related-blog.erb
+++ b/source/partials/cards/_related-blog.erb
@@ -25,14 +25,14 @@ end
 <%# Renders a card inside a post loop. Post var must be injected - AW %>
 <div class="card <%= style_classes %> <%= fit_classes %>">
     <% unless image_url == nil %>
-        <a class="" href="/blog/<%= post["slug"] %>" title="Read '<%= post["title"] %>'">
+        <a class="" href="/blog/<%= post["slug"] %>/" title="Read '<%= post["title"] %>'">
             <img data-interchange="[<%= image_url %>?fit=thumb&w=750&h=400, small]" alt="Image: <%= post["title"] %>" />
         </a>
     <% end %>
     
     <div class="card-section show-for-medium">
         <% unless post.has_key?("share_image") %>
-            <a class="" href="/blog/<%= post["slug"] %>" title="Read '<%= post["title"] %>'"><h3 class="headline-5"><%= post["title"] %></h3></a>
+            <a class="" href="/blog/<%= post["slug"] %>/" title="Read '<%= post["title"] %>'"><h3 class="headline-5"><%= post["title"] %></h3></a>
         <% end %>
         <% if post["author"].has_key?("fullname") %>
             <div class="media-object card-person">
@@ -49,7 +49,7 @@ end
             </div>
         <% end %>
         <% if post.has_key?("pub_date") %>
-            <div class="faded <%= card_size %>"><i class="fa fa-calendar" aria-hidden="true"></i> <%= post['pub_date'].strftime('%B %-d, %Y') %> &nbsp;</div>
+            <div class="faded <%= card_size %>"><%= inline_svg("small/icon-event-note", class: "icon-inline") %><%= post['pub_date'].strftime('%B %-d, %Y') %> &nbsp;</div>
         <% end %>
         <div class="<%= card_size %>">
         <% if post.has_key?("summary") || post["summary"] == "" %>
