--- a/source/partials/snippets/_person-vertical-simple.erb
+++ b/source/partials/snippets/_person-vertical-simple.erb
@@ -33,7 +33,7 @@ end
 <div class="person-simple<% if defined?(classes) %> <%= classes %><% end %>">
     <% if p.has_key?("profile_pic") %>
         <% if datican == true %>
-            <a href="/about/<%= p["slug"] %>" title="<%= person_summary %>">
+            <a href="/about/<%= p["slug"] %>/" title="<%= person_summary %>">
         <% end %>
         <span data-tooltip aria-haspopup="true" class="" data-alignment="center" data-tooltip-width="400" data-fade-in-duration="0" data-fade-out-duration="400" data-allow-html="true" data-disable-hover="false" data-v-offset="5" data-click-open="false"  title="<span class='text-small'><%= person_summary %><%= show_more %></span>">
             <img class="avatar avatar--large-mid circle" src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=250&h=250&fm=jpg&q=60" alt="<%= person_summary %>">
@@ -45,7 +45,7 @@ end
     <div class="">
         <<%= tag_1 %> class="person-name">
             <% if datican == true %>
-                <a href="/about/<%= p["slug"] %>" title="<%= p["fullname"] %>">
+                <a href="/about/<%= p["slug"] %>/" title="<%= p["fullname"] %>">
                     <%= p["fullname"] %>
                 </a>
             <% else %>
