--- a/source/partials/snippets/_modal.erb
+++ b/source/partials/snippets/_modal.erb
@@ -5,7 +5,7 @@
             <h4>Catalyze is now Datica!</h4>
             <p>We are excited to announce that on February 7th our next chapter was written: Catalyze officially became Datica.</p>
             <p>Check out a letter written from our CEO Travis Good, MD, to read a story behind the name change.</p>
-            <a href="/catalyze" class="button button--primary dismiss">Read about the rebrand</a>
+            <a href="/catalyze/" class="button button--primary dismiss">Read about the rebrand</a>
         </div>
         <div class="clipped-bg"></div>
     </div>
