--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -47,7 +47,7 @@ feed_url: "https://datica.com/press/feed.xml"
             <div class="column">
                 <div class="card drop">
                     <div class="card-section">
-                        <a href="/press-release/<%= post["slug"] %>" title="Read press release">
+                        <a href="/press-release/<%= post["slug"] %>/" title="Read press release">
                             <h3 class="headline-5"><%= post["title"] %></h3>
                         </a>
                             <p><span class="pub-date"><%= post['pub_date'].strftime('%B %-d, %Y') %></span></p>
