--- a/source/press/mediakit.html.erb
+++ b/source/press/mediakit.html.erb
@@ -1,5 +1,5 @@
 ---
-title: "Datica Press and Media Resources"
+title: "Datica Press and Downloadable Media Resources"
 summary: "Download our brand elements and understand how to use them."
 author: "Datica, Inc."
 tags: "media, logos, press, HIPAA, HL7, FHIR, interoperability, EHR, integration"
